# battdegr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md  mathematical-models.md
examples/: lfp_degradation_analysis.ipynb
src/battdegr/: __init__.py
src/battdegr/analysis/: __init__.py  lifetime_predictor.py  model_validator.py  stress_analysis.py
src/battdegr/utils/: __init__.py
